<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lino.com.br.calculadora.CalculadoraActivity">


    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/btn7"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn8"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/btn7"
        android:layout_marginLeft="0dp" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn9"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/btn8"
        android:layout_marginLeft="0dp" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDiv"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/btn9"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/visor"
        android:layout_width="368dp"
        android:layout_height="114dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:hint="@string/visor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn7"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn5"
        android:layout_marginRight="0dp" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:text="@string/btn0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="353dp"
        android:layout_height="43dp"
        android:text="@string/btnIgual"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn0"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnSubtrair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/btnSubtrair"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSoma"
        app:layout_constraintLeft_toRightOf="@+id/btn0"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        app:layout_constraintLeft_toRightOf="@+id/btn1"
        android:layout_marginLeft="0dp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        app:layout_constraintLeft_toRightOf="@+id/btn2"
        android:layout_marginLeft="0dp" />

    <Button
        android:id="@+id/btnSoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSoma"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMult"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn3"
        android:layout_marginLeft="0dp" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn5"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn8"
        app:layout_constraintRight_toLeftOf="@+id/btn6"
        android:layout_marginRight="0dp" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn6"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn9"
        app:layout_constraintRight_toLeftOf="@+id/btnMult"
        android:layout_marginRight="0dp" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMult"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnDiv"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="122dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnLimpar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIgual" />
</android.support.constraint.ConstraintLayout>
